# BitConverter

./: BitConverter.h  CMakeLists.txt  README.md  data.h  globais.h  program.cpp  program.h  stringify.h
